# 8T

./: .gitignore  CMakeLists.txt  Makefile  README.md  listCard.json  xmake.lua
data/: Rules.json  listCard.json
data/blender/: arrow.blend1  arrow_turn.blend1  card.blend  card.blend1  card_empty.blend1  card_pick.blend  card_pick.blend1  card_play.blend  card_play.blend1  case.blend  case.blend1  gameover.blend  gameover.blend1
doc/: Doxyfile
network/: Network.h
src/: Case.h  Deck.cpp  Deck.h
src/console/: Console.cpp  Console.h  GameConsole.cpp  GameConsole.h  GridConsole.cpp  GridConsole.h  playConsole.cpp
src/core/: Card.cpp  Card.h  Case.cpp  Case.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Grid.cpp  Grid.h  Piece.cpp  Piece.h  Player.cpp  Player.h  main.cpp  testRegression.cpp
src/core/rules/: GlobalRules.hpp  Rules.cpp  Rules.h  RulesCommun.cpp  RulesCommun.hpp  RulesRare.cpp  RulesRare.hpp
src/graphics/: Animation.cpp  Animation.h  Graphic.cpp  Graphic.h  GridGraphic.cpp  GridGraphic.h  PiocheGraphic.cpp  PlayGraphic.cpp  TestRegressionGraphic.cpp
src/menu/: Menu.cpp  Menu.h  TestImgui.cpp
src/network/: Network.cpp  Network.h  main.cpp  sender.cpp
